added CAMT page

--- a/CAMT.html
+++ b/CAMT.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html">PROFILE</a>
-    <a href="CAMT.html">CAMT</a>
+    <p>CAMT is in Chiang Mai University</p>
 </body>
 </html>
