add friend image

--- a/friend.html
+++ b/friend.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>Hunsawut Hanworawirun</p>
+    <p>i'm a student study at CAMT</p>
+    <img src="63ca56659b40d65d.png" height="200px" width="200px">
 </body>
 </html>
