--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <a href="profile.html">PROFILE</a>
     <a href="friend.html">FRIEND</a>
-    To Be continued...
     <a href="CAMT.html">CAMT</a>
+    <img src="camt_logo.png" height="200px" width="200px">
 </body>
 </html>
